--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "comlink": "^4.3.1",
     "d3-scale-chromatic": "^3.0.0",
     "dexie": "^3.2.0",
+    "dompurify": "^2.3.6",
     "fast-levenshtein": "^3.0.0",
     "fuse.js": "^6.5.3",
     "hold-event": "^0.1.0",
@@ -48,6 +49,7 @@
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
     "luxon": "^2.1.1",
+    "marked": "^4.0.12",
     "moment": "^2.29.1",
     "powerbi-client": "^2.19.1",
     "powerbi-client-react": "^1.3.3",
