--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@azure/msal-browser": "^2.18.0",
     "@cognite/reveal": "^2.3.0",
     "@cognite/sdk": "5.6.2",
+    "@cutting/use-get-parent-size": "^1.19.2",
     "@dbeining/react-atom": "^4.1.21",
     "@equinor/eds-core-react": "^0.14.2",
     "@equinor/eds-icons": "^0.10.0",
