--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "castberg-project-portal",
-  "version": "0.1.0-alpha",
+  "version": "0.4.0",
   "description": "Castberg Project Portal",
   "main": "Index.ts",
   "author": "Castberg Project Portal Team",
