[Bookmarks Manager & PowerBI] - Feat/bookmarks manager (#513)
Bookmarks manager and implementation for PBI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,6 +111,9 @@
             "@equinor/lighthouse-hooks": [
                 "./src/hooks"
             ],
+            "@equinor/BookmarksManager": [
+                "./src/packages/BookmarksManager"
+            ],
             "@equinor/overlay-menu": [
                 "./src/components/OverlayMenu"
             ]
