--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,12 @@
             "@equinor/Kpi": [
                 "./src/packages/KPI"
             ],
+            "@equinor/lighthouse-widgets": [
+                "./src/Core/Widgets"
+            ],
+            "@equinor/lighthouse-functions": [
+                "./src/Core/Functions"
+            ],
             "@equinor/atom": [
                 "./src/Core/Atom"
             ],
@@ -84,7 +90,7 @@
             "@equinor/hooks": [
                 "./src/hooks"
             ],
-            "@equinor/Utils": [
+            "@equinor/lighthouse-utils": [
                 "./src/packages/Utils"
             ],
             "@equinor/typeGuard": [
