--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
             "@equinor/lighthouse-functions": [
                 "./src/Core/Functions"
             ],
+            "@equinor/lighthouse-fusion-modules": [
+                "./src/FusionModules"
+            ],
             "@equinor/atom": [
                 "./src/Core/Atom"
             ],
