--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@microsoft/applicationinsights-web": "^2.7.3",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@microsoft/signalr": "^6.0.2",
+    "@types/javascript-color-gradient": "^2.4.0",
     "apexcharts": "^3.29.0",
     "camera-controls": "^1.34.1",
     "chart.js": "^3.7.0",
@@ -47,6 +48,7 @@
     "fuse.js": "^6.5.3",
     "hold-event": "^0.1.0",
     "install": "^0.13.0",
+    "javascript-color-gradient": "^2.4.4",
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
     "luxon": "^2.1.1",
