--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@microsoft/applicationinsights-web": "^2.7.3",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@microsoft/signalr": "^6.0.2",
+    "ag-grid-community": "^27.3.0",
+    "ag-grid-enterprise": "^27.3.0",
+    "ag-grid-react": "^27.3.0",
     "apexcharts": "^3.29.0",
     "camera-controls": "^1.34.1",
     "chart.js": "^3.7.0",
