--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@equinor/eds-icons": "^0.10.0",
     "@equinor/eds-tokens": "^0.7.0",
     "@equinor/fusion-framework-module": "^0.1.1",
+    "@equinor/fusion-react-ag-grid-addons": "^0.3.0",
     "@esfx/async-canceltoken": "^1.0.0-pre.30",
     "@microsoft/applicationinsights-react-js": "^3.2.2",
     "@microsoft/applicationinsights-web": "^2.7.3",
