Enhancment/workspace and sidesheet configuration (#632)
* open sidesheet updates with url handler, but not supportet in manifest yet

* onGroupeSelect added to park wiew types

* workspace group donnfig v1

* move workspace api start

* Typings

* loading form homepage

* parent id

* Lighthouse Creator

* updates

* scope creator

* access chech on side sheet

* cleanup

* Workspace update

* removed old data factory

* import cleanup and remove idresolver form workspace

* Apps soidesheet config

* pr fix

* groupSelect return string

* build fix

* readme update

* onhashchange chech

* url create fix

* setup releascontro edit

* removed mount sisheet form url from location provider

* alow for back in url

* build fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,11 +33,17 @@
             "@equinor/lighthouse-functions": [
                 "./src/Core/Functions"
             ],
+            "@equinor/lighthouse-fusion-modules": [
+                "./src/FusionModules"
+            ],
             "@equinor/atom": [
                 "./src/Core/Atom"
             ],
             "@equinor/lighthouse-portal-client": [
                 "./src/Core/Client"
+            ],
+            "@equinor/lighthouse-confirmation-dialog": [
+                "./src/Core/ConfirmationDialog"
             ],
             "@equinor/lighthouse-components": [
                 "./src/packages/Components"
@@ -47,6 +53,9 @@
             ],
             "@equinor/GroupView": [
                 "./src/Core/GroupView"
+            ],
+            "@equinor/lighthouse-workspace-api": [
+                "./src/Core/WorkSpaceApi"
             ],
             "@equinor/WorkSpace": [
                 "./src/Core/WorkSpace"
