--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
+    "react-highlight-words": "^0.18.0",
     "react-query": "^3.34.4",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
