--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,9 @@
             "@equinor/VisualEditor": [
                 "./src/packages/VisualEditor"
             ],
+            "@equinor/procosys-urls": [
+                "./src/packages/ProCoSysUrls"
+            ],
             "@equinor/worker": [
                 "./src/packages/WebWorkers"
             ],
