--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-arrow-navigation": "^1.0.1",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
