fixinf tags and echo viewer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -148,7 +148,8 @@
         "node_modules"
     ],
     "include": [
-        "./src"
+        "./src",
+        "./packages"
     ],
     "typedocOptions": {
         "entryPoints": [
