--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "@azure/msal-browser": "^2.18.0",
-    "@cognite/reveal": "^2.3.0",
-    "@cognite/sdk": "5.6.2",
+    "@cognite/reveal": "^3.0.2",
+    "@cognite/sdk": "^7.3.0",
     "@cutting/use-get-parent-size": "^1.19.2",
     "@dbeining/react-atom": "^4.1.21",
     "@equinor/eds-core-react": "^0.14.2",
@@ -36,6 +36,7 @@
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@microsoft/signalr": "^6.0.2",
     "apexcharts": "^3.29.0",
+    "base64-js": "^1.5.1",
     "camera-controls": "^1.34.1",
     "chart.js": "^3.7.0",
     "chartjs-plugin-zoom": "^1.2.0",
@@ -45,6 +46,7 @@
     "fast-levenshtein": "^3.0.0",
     "fuse.js": "^6.5.3",
     "hold-event": "^0.1.0",
+    "ieee754": "^1.2.1",
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
